test/types/type_variables/ferguson/instantiate-non-generic.good
instantiate-non-generic.chpl:7: error: named arguments can only be used in type construction to set 'type' or 'param' fields
instantiate-non-generic.chpl:4: note: field 'x' declared here is not 'type' or 'param'
